--- a/index.html
+++ b/index.html
@@ -238,6 +238,29 @@
 
 <div class="box">
     <style>
+   /* Select the element that you want to style the scrollbar for */
+.container {
+   
+ 
+
+    /* Customize the scrollbar */
+    
+    scrollbar-color: darkgray rgb(239, 239, 239); /* Scrollbar track and thumb color */
+}
+
+/* Define scrollbar styles */
+::-webkit-scrollbar {
+    width: auto; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(239, 239, 239); /* Color of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: darkgray; /* Color of the scrollbar thumb */
+   
+}
 
        
         .container {
