--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             gap: 8px; /* Gap between grid items */
             padding: 0px;
             box-shadow: 0px 0px 2px rgb(61, 61, 61);
+            scrollbar-color: darkgray rgb(239, 239, 239);
             
         }
 
@@ -299,6 +300,7 @@
         animation: scroll 3s linear infinite;
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 0px 2px rgb(61, 61, 61);
+        scrollbar-color: darkgray rgb(239, 239, 239);
     }
 
     @keyframes scroll {
